src/test/ui/tag-variant-disr-dup.stderr
error[E0081]: discriminant value `0` assigned more than once
  --> $DIR/tag-variant-disr-dup.rs:3:1
   |
LL | enum Color {
   | ^^^^^^^^^^
...
LL |     Black = 0x000000,
   |             -------- first assignment of `0`
LL |     White = 0x000000,
   |             -------- second assignment of `0`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0081`.
